[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/block.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Scripts/grid-snapper.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.7003, 8 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Pivot" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="Pivot"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Cameras" type="Node2D" parent="."]

[node name="GridSnapper" type="Position2D" parent="Cameras"]
script = ExtResource( 3 )

[node name="GridCamera" type="Camera2D" parent="Cameras/GridSnapper"]
anchor_mode = 0
smoothing_enabled = true

[node name="NormalCamera" type="Camera2D" parent="Cameras"]
current = true
smoothing_enabled = true
smoothing_speed = 10.0

[node name="Collisions" type="Node2D" parent="."]
visible = false

[node name="RightCollision" type="RayCast2D" parent="Collisions"]
scale = Vector2( 1, 0.5 )
enabled = true
cast_to = Vector2( 5, 0 )
collision_mask = 2
collide_with_areas = true

[node name="LeftCollision" type="RayCast2D" parent="Collisions"]
scale = Vector2( 1, 0.5 )
enabled = true
cast_to = Vector2( -5, 0 )
collision_mask = 2
collide_with_areas = true

[node name="BottomCollision" type="RayCast2D" parent="Collisions"]
scale = Vector2( 1.5, 1 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 2

[node name="TopCollision" type="RayCast2D" parent="Collisions"]
scale = Vector2( 1.5, 1 )
enabled = true
cast_to = Vector2( 0, -10 )
collision_mask = 2
collide_with_areas = true

[node name="Tween" type="Tween" parent="."]

[node name="Effects" type="Node2D" parent="."]

[node name="GhostTimer" type="Timer" parent="Effects"]

[connection signal="timeout" from="Effects/GhostTimer" to="." method="_on_GhostTimer_timeout"]
